# alcubierre

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
.envs/: .example.env
alcubierre/modules/: api_reqs.py  play_sound.py  rbx_types.py  script_loop.py
docs/: DEVELOPMENT.md  advanced_requirements.txt  icon.pdn
modules/: apiReqs.py  api_reqs.py  dataSave.py  data_save.py  loadEnv.py  load_env.py  playSound.py  play_sound.py  processHandle.py  process_handle.py  rbxTypes.py  rbx_types.py  scriptLoop.py  script_loop.py  verbosePrint.py  verbose_print.py
sounds/tts/: generate.txt
src/alcubierre/: __main__.py
src/alcubierre/modules/: api_reqs.py  data_save.py  load_env.py  play_sound.py  process_handle.py  rbx_types.py  script_loop.py  verbose_print.py
src/alcubierre/sounds/piano/: readme.txt
src/alcubierre/sounds/tts/: readme.txt
