[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt",
    "versioningit"
]
build-backend = "hatchling.build"


[project]
name = "alcubierre"
authors = [
    { name="exurd", email="7785022+exurd@users.noreply.github.com" },
]
keywords = ["roblox", "achievements", "badges", "sober", "bloxstrap"]
description = "A Roblox Badge-to-Badge Place Teleporter"
dynamic = ["version", "dependencies"]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]

[project.scripts]
alcubierre = "alcubierre.__main__:main"

[project.urls]
Homepage = "https://github.com/exurd/alcubierre/"
Repository = "https://github.com/exurd/alcubierre.git"
Issues = "https://github.com/exurd/alcubierre/issues"


[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/alcubierre/**"]

[tool.hatch.build.targets.wheel]
include = ["src/alcubierre/**"]
